Refactoring project scheme

--- a/content/index.html
+++ b/content/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema Cardiovascular</title>
-    <link rel="stylesheet" href="index.css" />
+    <title>Sobre o Sistema Cardiovascular</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="../content/">Conteúdo</a>
-    <a href="../quiz/">Quiz</a>
+    <p>teste1</p>
   </body>
 </html>
