Added funcionalities and examples tests to pages

--- a/content/index.html
+++ b/content/index.html
@@ -1,12 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre o Sistema Cardiovascular</title>
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p>teste1</p>
+    <h1>Sistema Cardiovascular</h1>
+    <p>
+      O sistema cardiovascular, também conhecido como sistema circulatório, é
+      responsável pelo transporte eficiente de nutrientes, oxigênio e outros
+      compostos essenciais pelo corpo. Consiste no coração, vasos sanguíneos
+      (artérias, veias e capilares) e sangue. As artérias transportam sangue
+      rico em oxigênio do coração para os tecidos, enquanto as veias levam o
+      sangue de volta ao coração, e os capilares facilitam a troca de
+      substâncias entre o sangue e os tecidos.
+    </p>
+
+    <iframe
+      title="Cardiovascular System"
+      frameborder="0"
+      allowfullscreen
+      mozallowfullscreen="true"
+      webkitallowfullscreen="true"
+      allow="autoplay; fullscreen; xr-spatial-tracking"
+      xr-spatial-tracking
+      execution-while-out-of-viewport
+      execution-while-not-rendered
+      web-share
+      width="100%"
+      height="400px"
+      src="https://sketchfab.com/models/f593cf0b7531474b9746d8274693d981/embed"
+    ></iframe>
+
+    <h2>Veias, Artérias e Capilares:</h2>
+    <p>
+      As veias são vasos sanguíneos que transportam sangue de volta ao coração,
+      geralmente contendo uma quantidade maior de dióxido de carbono e menos
+      oxigênio. Por outro lado, as artérias são responsáveis por levar o sangue
+      rico em oxigênio do coração para o resto do corpo. Os capilares são os
+      vasos mais finos e permeáveis, onde ocorre a troca de substâncias entre o
+      sangue e os tecidos, permitindo a entrega de oxigênio e nutrientes e a
+      remoção de resíduos metabólicos.
+    </p>
+
+    <iframe
+      title="Heart Inner V2 Preload"
+      frameborder="0"
+      allowfullscreen
+      mozallowfullscreen="true"
+      webkitallowfullscreen="true"
+      allow="autoplay; fullscreen; xr-spatial-tracking"
+      xr-spatial-tracking
+      execution-while-out-of-viewport
+      execution-while-not-rendered
+      web-share
+      width="100%"
+      height="400px"
+      src="https://sketchfab.com/models/6c11eb03dd1545358abfe2b8e436fa85/embed"
+    >
+    </iframe>
+
+    <h2>Coração:</h2>
+    <p>
+      O coração é um órgão muscular vital que funciona como uma bomba eficiente
+      para impulsionar o sangue através do sistema circulatório. Localizado no
+      centro do peito, entre os pulmões, é dividido em quatro câmaras - dois
+      átrios e dois ventrículos - cada um desempenhando um papel específico no
+      processo de circulação sanguínea. O coração recebe sangue rico em oxigênio
+      dos pulmões através das veias pulmonares no átrio esquerdo e o bombeia
+      para o corpo através da aorta a partir do ventrículo esquerdo, garantindo
+      um fluxo constante de sangue oxigenado para os tecidos e órgãos.
+    </p>
   </body>
 </html>
