--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema Cardiovascular</title>
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body>
-    <a href="../content/">Conteúdo</a>
-    <a href="../quiz/">Quiz</a>
+  <body class="main-container">
+    <h1 class="title">Sistema Cardiovascular</h1>
+    <p class="explain">
+      Bem-vindos! <br />
+      Nesta seção, mergulharemos nas maravilhas do Sistema Cardiovascular.
+      <br />
+      Aqui, você encontrará um resumo conciso, animações 3D envolventes e um
+      quiz cheio de curiosidades. <br />
+      Prepare-se para uma jornada fascinante através do coração e suas conexões
+      vitais. <br />
+      Vamos começar!
+    </p>
+    <nav class="navigation">
+      <a href="../content/">Conteúdo</a>
+      <a href="../quiz/">Quiz</a>
+    </nav>
+
+    <ul class="group">
+      <li>um</li>
+      <li>dois</li>
+      <li>tres</li>
+      <li>quatro</li>
+      <li>cinco</li>
+      <li>seis</li>
+      <li>sete</li>
+      <li>oito</li>
+    </ul>
+
+    <footer></footer>
   </body>
 </html>
