--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Sistema Cardiovascular</title>
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p>teste2</p>
+    <div class="quiz-container">
+      <h2 id="question"></h2>
+      <div id="options"></div>
+      <div id="explanation"></div>
+      <button id="next-btn">Próxima Pergunta</button>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
