--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       Vamos começar!
     </p>
     <nav class="navigation">
-      <a href="../cardiovascular/content/">Conteúdo</a>
-      <a href="../cardiovascular/quiz/">Quiz</a>
+      <a href="./cardiovascular/content/">Conteúdo</a>
+      <a href="/cardiovascular/quiz/">Quiz</a>
     </nav>
 
     <ul class="group">
