--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       Vamos começar!
     </p>
     <nav class="navigation">
-      <a href="..//content/">Conteúdo</a>
-      <a href="/quiz/">Quiz</a>
+      <a href="./content/">Conteúdo</a>
+      <a href="../quiz/">Quiz</a>
     </nav>
 
     <ul class="group">
