--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </p>
     <nav class="navigation">
       <a href="./content/">Conteúdo</a>
-      <a href="../quiz/">Quiz</a>
+      <a href="./quiz/">Quiz</a>
     </nav>
 
     <ul class="group">
