--- a/index.html
+++ b/index.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Sistema Cardiovascular</title>
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body class="main-container">
-    <h1 class="title">Sistema Cardiovascular</h1>
-    <p class="explain">
-      Bem-vindos! <br />
+</head>
+<body>
+    
+    <header>Sistema Cardiovascular</header>
+    <hr>
+    <br><br><br>
+
+    <img src="17285423-anatomia-do-coracao-coracao-humano-delineado-desenho-detalhado-de-um-coracao-medico-vetor.png">
+
+    <p>Bem-Vindos!<br>
       Nesta seção, mergulharemos nas maravilhas do Sistema Cardiovascular.
-      <br />
+      <br>
       Aqui, você encontrará um resumo conciso, animações 3D envolventes e um
-      quiz cheio de curiosidades. <br />
+      quiz cheio de curiosidades.<br>
       Prepare-se para uma jornada fascinante através do coração e suas conexões
-      vitais. <br />
+      vitais.<br>
       Vamos começar!
     </p>
-    <nav class="navigation">
-      <a href="../content/">Conteúdo</a>
-      <a href="../quiz/">Quiz</a>
-    </nav>
 
-    <ul class="group">
-      <li>um</li>
-      <li>dois</li>
-      <li>tres</li>
-      <li>quatro</li>
-      <li>cinco</li>
-      <li>seis</li>
-      <li>sete</li>
-      <li>oito</li>
+    <button>Página 1</button>
+    <button>Página 2</button>
+    <button>Página 3</button>
+
+    <ul>
+        <li>um</li>
+        <li>dois</li>
+        <li>tres</li>
+        <li>quatro</li>
+        <li>cinco</li>
+        <li>seis</li>
+        <li>sete</li>
+        <li>oito</li>
     </ul>
+  
 
-    <footer></footer>
-  </body>
+</body>
 </html>
